fixing changes on mobile

--- a/styles.css
+++ b/styles.css
@@ -577,7 +577,7 @@ form {
     border-radius: 10px;
     border-color: #af9595;
     margin-top: 25px;
-    width: 350px;
+    width: 160px;
     height: 50px;
     font-size: 18px;
     cursor: pointer;
